--- a/web/config.toml
+++ b/web/config.toml
@@ -1,3 +1,4 @@
-baseURL = "http://example.org/"
-languageCode = "en-us"
-title = "My New Hugo Site"
+baseURL = "http://theindefinitearticles.co.uk"
+languageCode = "en-gb"
+title = "The Indefinite Articles"
+theme = "ananke"
